Manage standard questions for future assessments (#40)
